--- a/python-app/template/catalog-info.yaml
+++ b/python-app/template/catalog-info.yaml
@@ -1,11 +1,12 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name:  ${{values.app_name}} 
-  description: This displays the time using python-app, named  ${{values.app_name}}
+  name: ${{values.app_name}}
+  description: This displays the time using ${{values.app_name}}.
   # Example for optional annotations
   annotations:
     github.com/project-slug: oladejotunde60/${{values.app_name}}
+    backstage.io/techdocs-ref: dir:.
 spec:
   type: service
   owner: development
